# comboi

./: .gitignore  DEPLOYMENT.md  README.md  RESTRUCTURING_SUMMARY.md  SAP_B1_CONNECTOR.md  SAP_B1_IMPLEMENTATION_SUMMARY.md  build.py  pyproject.toml
azure_functions/: host.json  local.settings.json.example  requirements.txt
azure_functions/driver/: __init__.py  function.json
azure_functions/executor/: __init__.py  function.json
configs/: default.yml  initial.yml  sap_b1_example.yml  sap_b1_tables.yml  transformations.yml
contracts/: energy_consumption_analytics.yml  finance_accounts_summary.yml  finance_transactions_verified.yml
dbt_project/: README.md  dbt_project.yml
docs/: SAP_B1_AZURE_DEPLOYMENT.md  schema_evolution.md
soda/: configuration.yml
soda/checks/: orders.yml
src/comboi/: dbt_runner.py  gdpr.py
src/ducksrvls/: cli.py  config.py  runner.py
terraform/: README.md  main.tf  outputs.tf  providers.tf  variables.tf
tools/: embed_ducksrvls.py  scaffold_transformation.py
transformations/: README.md  customer_metrics.py  customers_clean.py  daily_sales.py  finance_fraud_detection.py  orders_clean.py
transformations/bruin/: ecommerce_product_recommendations.py  energy_load_forecasting.py  health_patient_risk_stratification.py
transformations/contracts/: README.md  ecommerce_customer_lifetime_value.yml  ecommerce_user_sessions.yml  energy_meter_readings.yml  gdpr_customers.yml  health_patient_encounters.yml  health_patient_readmissions.yml  sap_customer_analytics_gold.yml  sap_ocrd_silver.yml  sap_oprj_silver.yml  sap_oslp_silver.yml  (+2 more)
(+53 files in other folders)
